# minimal_data_science_cookiecutter

./: .gitignore  LICENSE  README.md  cookiecutter.json  pyproject.toml
.devcontainer/: devcontainer.json
notebooks/: sample.ipynb
src/utils/: __init__.py  test_utils.py
{{cookiecutter.project_slug}}/: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
{{cookiecutter.project_slug}}/src/app/: __init__.py  app.py
{{cookiecutter.project_slug}}/src/utils/: sample.py  singleton.py  test_utils.py
