[project]
name = "MyAnalysisProject"
description = "My Project description"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pandas",
    "numpy"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "pytest",
    "pytest-cov",
    "flake8",
]

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"]  # ["."] by default